--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script charset="utf-8" src="https://map.qq.com/api/js?v=2.exp&key=JYLBZ-ZGQ3U-5JFV5-4WUDC-OK676-JVB3E"></script>
+    <script src="https://3gimg.qq.com/lightmap/components/geolocation/geolocation.min.js "></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>tony</title>
   </head>
